--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,10 @@
     },
     "files": [
         "src/framework.d.ts",
+        "src/stock.d.ts",
         "src/mow.d.ts",
         "src/herd-stock-function.ts",
+        "src/mow-cards.ts",
         "src/mow.ts",
         "src/define.ts"
     ]
